--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ a {
     <div class="container">
         <!-- barra de navegação -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#"></i><h4><B>START BOOTSTRAP</B> </h4></a>
+            <a class="navbar-brand" href="#"></i><h4><B>Bruno Santos</B> </h4></a>
             <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
