modificação no titulo na barra de navegação

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@ a {
             
 <section id="portfolio">
 	<div class="container">
-		<div class="row">
-			<div class="col-md">
+		<div class="row" >
+			<div class="col-md"    data-aos="zoom-in">
 				<a href="#"><img src="img/CONTOS DO BRASIL.jpg" width="100%"></a>
 			</div>
       <div class="col-md">
