--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ a {
 <section id="portfolio">
 	<div class="container">
 		<div class="row" >
-			<div class="col-md"    data-aos="zoom-in">
+			<div class="col-md">
 				<a href="#"><img src="img/CONTOS DO BRASIL.jpg" width="100%"></a>
 			</div>
       <div class="col-md">
@@ -154,7 +154,7 @@ a {
 </section>
 
 <div class="text-center">
-  <h2 ><b>ABOUT</b></h2>
+  <h2 ><b>SOBRE</b></h2>
               <i class="fas fa-star"></i>
 </div>
 
